tests/baselines/reference/letAsIdentifier.errors.txt
letAsIdentifier.ts(1,5): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
letAsIdentifier.ts(2,5): error TS2300: Duplicate identifier 'a'.
letAsIdentifier.ts(3,1): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
letAsIdentifier.ts(5,1): error TS2300: Duplicate identifier 'a'.


==== letAsIdentifier.ts (4 errors) ====
    var let = 10;
        ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
    var a = 10;
        ~
!!! error TS2300: Duplicate identifier 'a'.
    let = 30;
    ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
    let
    a;
    ~
!!! error TS2300: Duplicate identifier 'a'.